Grant FlatLaf deliberate native access on modern JDKs
FlatLaf loads a native library for platform window integration; from
JDK 24 (JEP 472) that is a restricted call. The permission is now
explicit in both launch paths: the run target passes
--enable-native-access=ALL-UNNAMED (required for -cp launches, where
the manifest attribute is ignored), and the packaged jar carries
Enable-Native-Access: ALL-UNNAMED in its manifest, honoured by
java -jar even under --illegal-native-access=deny. The reason lives in
docs/development.md under 'Native access' so the flag is not later
removed as noise, citing the issue's JDK 26.0.1 measurements.

Verified here on the recorded JDK 21 minimum: the flag is accepted,
make run launches cleanly, and the manifest attribute is present in
the built jar.

Closes #82

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>